--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "mpdf/mpdf": "^6.1",
-        "twbs/bootstrap": "5.2.3"
+        "mpdf/mpdf": "^6.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
